# Small-text-compressor-using-Huffman-code

./: .gitignore  README.md  pyproject.toml  references.bib
data/: make_synthetic.py  random.txt  repeated.txt  vietnamese.txt
results/: benchmark.csv  environment.txt  summary.md
src/huffman/: __init__.py
src/huffman/analysis/: __init__.py  baselines.py  benchmark.py  visualize.py
src/huffman/cli/: __init__.py  main.py
src/huffman/codec/: __init__.py  compressor.py  decompressor.py
src/huffman/common/: __init__.py  metrics.py  utils.py
src/huffman/container/: __init__.py  bitstream.py  file_io.py
src/huffman/core/: __init__.py  huffman.py  priority_queue.py  tree.py
tests/: test_baselines.py  test_cli.py  test_file_io.py  test_huffman_core.py  test_roundtrip.py  test_structures.py
web/: index.html
